--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Level One</h2>
-            <p class="lead">This is the most basic level. It consists of simple English words and structures. It is recemmonded for kids aged 3-6.</p>
+            <p class="lead">This is the most basic level. It consists of simple English words and structures. It is recommended for kids aged 3-6.</p>
             <a href="Level1.html">Level One</a>
           </div>
         </div>
@@ -91,7 +91,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Levels Two</h2>
-            <p class="lead">This is the second level. It consists of slightly harder English words and structures. It is recemmonded for kids aged 5-9 with advance reading skills.</p>
+            <p class="lead">This is the second level. It consists of slightly harder English words and structures. It is recommended for kids aged 5-9 with advance reading skills.</p>
             <a href="Level2.html">Level Two</a>
           </div>
         </div>
@@ -103,7 +103,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Level Three</h2>
-            <p class="lead">This is the level targetted towards middle school children. It consists of a bit complex English words and structures. It is recemmonded for kids aged 9-13.</p>
+            <p class="lead">This is the level targetted towards middle school children. It consists of a bit complex English words and structures. It is recommended for kids aged 9-13.</p>
             <a href="Level3.html">Level Three</a>
           </div>
         </div>
