--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p class="lead">With a screen which is constantly scrolling, student have to have both proper focus and English skills to keep on with the flow of words.</p>
             <ul>
               <li>Different levels of text with different speeds</li>
-              <li>Mobile usable</li>
+              <li>Officially verified by a UC Admissions officer and AP English teacher with more than twenty years of experience</li>
               <li>Optimized for reading - best color contrasts between the background and text</li>
             </ul>
           </div>
