Changed the tag "Levels two" to "Level two"

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Levels Two</h2>
+            <h2>Level Two</h2>
             <p class="lead">This is the second level. It consists of slightly harder English words and structures. It is recommended for kids aged 5-9 with advance reading skills.</p>
             <a href="Level2.html">Level Two</a>
           </div>
